--- a/_posts/2012-03-01-resume.md
+++ b/_posts/2012-03-01-resume.md
@@ -69,9 +69,10 @@ Windows (7, Vista, XP, 95, 3.1, DOS)
 - <http://renewarchitecture.com> - I did the page design/layout, and created a custom content management system using CSV files as the structure definition (PHP)
 - <http://fluxproductions.net> - I did the page design/layout, and created a custom web-based content management back-end (PHP/MySQL)
 - <http://lssnca.org> - I created a custom web-based content management back-end (Ruby/Rails)
-- [This Site](http://donaldmerand.com/view/1330567537): Written from scratch in PHP. The custom CMS uses flat text files in a [markdown](http://daringfireball.net/projects/markdown/) format combined with UNIX utilities for speed and simplicity.
+- <http://rickshaw.explo.org> - An online schedule management tool to manage ~300 faculty assignments to 10-12 periods a day for an entire summer. (Ruby/Rails, JQuery, CoffeeScript, SCSS)
 - <http://advisor.explo.org> - A curriculum management system. handles teacher/advisor assignment, course creation, curriculum creation methods, and passing back and forth of working files. synchronizes with FileMaker management database at the school. (Ruby/Rails -- FileMaker)
 - <http://forms.explo.org> - An online management system for enrollment forms. uses mysql as backend on the web, syncs with filemaker management database at the school. (PHP/MySQL -- FileMaker)
+- [This Site](http://donaldmerand.com/code/2012/02/29/about-this-site.html): Originally written from scratch in PHP. The custom CMS uses flat text files in a [markdown](http://daringfireball.net/projects/markdown/) format combined with UNIX utilities for speed and simplicity.
 
 
 #    FileMaker
