Add unified-nps lib + post

--- a/lib/unified-nps/backups/blog-post-2025-06-13T23-17-35-743Z.md
+++ b/lib/unified-nps/backups/blog-post-2025-06-13T23-17-35-743Z.md
@@ -21,6 +21,7 @@ category: projects
         <select id="tuning-preset" class="border border-gray-300 rounded px-3 py-2 w-full">
           <option value="perfect-fourths" selected>Perfect Fourths (12-string)</option>
           <option value="standard-guitar">Standard Guitar (6-string)</option>
+          <option value="bass-5-string">5-String Bass</option>
         </select>
       </div>
       
@@ -45,16 +46,21 @@ category: projects
       </div>
       
       <div>
-        <label for="scale-type" class="block text-sm font-medium mb-2">Scale:</label>
+        <label for="scale-title" class="block text-sm font-medium mb-2">Scale Title:</label>
+        <input type="text" id="scale-title" class="border border-gray-300 rounded px-3 py-2 w-full" 
+               placeholder="Enter scale name" value="Major Scale">
+      </div>
+      
+      <div>
+        <label for="scale-type" class="block text-sm font-medium mb-2">Scale Presets:</label>
         <select id="scale-type" class="border border-gray-300 rounded px-3 py-2 w-full">
           <option value="major" selected>Major</option>
           <option value="natural-minor">Natural Minor</option>
           <option value="harmonic-minor">Harmonic Minor</option>
           <option value="melodic-minor">Melodic Minor</option>
-          <option value="major-pentatonic">Major Pentatonic</option>
-          <option value="minor-pentatonic">Minor Pentatonic</option>
-          <option value="dorian">Dorian</option>
-          <option value="mixolydian">Mixolydian</option>
+          <option value="pentatonic">Pentatonic</option>
+          <option value="whole-tone">Whole Tone</option>
+          <option value="chromatic">Chromatic</option>
           <option value="blues">Blues</option>
           <option value="custom">Custom Scale</option>
         </select>
@@ -77,25 +83,39 @@ category: projects
           <option value="B">B</option>
         </select>
       </div>
+      
+      <div class="flex items-end">
+        <button id="save-preset-button" class="px-4 py-2 border-2 rounded cursor-pointer w-full" 
+                style="border-color: #137752; color: #137752; background: transparent;">
+          Save as Preset
+        </button>
+      </div>
+    </div>
+    
+    <div class="text-left mt-4">
+      <button id="export-button" class="text-sm mr-4 cursor-pointer hover:opacity-70 transition-opacity" 
+              style="color: #137752;">
+        Export Pattern
+      </button>
+      <label for="import-file" class="text-sm cursor-pointer hover:opacity-70 transition-opacity" 
+             style="color: #137752;">
+        Import Pattern
+      </label>
+      <input type="file" id="import-file" accept=".json" style="display: none;">
     </div>
   </div>
   
-  <div id="visualization-title" class="text-center mb-4">
-    <input type="text" id="custom-title" class="text-xl font-bold text-gray-800 text-center border-none bg-transparent w-full" 
-           value="C Major Grand Unified Scale Pattern" style="outline: none;">
-    <p class="text-sm text-gray-600">Perfect Fourths Tuning • 3 Notes per String • Starting from Scale Degree 1</p>
+  <div id="visualization-title" class="relative text-center mb-4">
+    <h2 id="display-title" class="text-xl font-bold text-gray-800">C Major Scale Pattern</h2>
+    <p id="display-subtitle" class="text-sm text-gray-600">Perfect Fourths Tuning • 3 Notes per String • Starting from Scale Degree 1</p>
+    <button id="print-button" class="absolute top-0 right-0 text-2xl hover:opacity-70 transition-opacity" 
+            title="Print Visualization">🖨️</button>
   </div>
   
   <div id="fretboard-container" class="overflow-x-auto">
     <svg id="fretboard" width="800" height="700"></svg>
   </div>
   
-  <div class="text-center mt-4">
-    <button id="print-button" class="px-4 py-2 border-2 rounded cursor-pointer" 
-            style="border-color: #137752; color: #137752; background: transparent;">
-      Print Visualization
-    </button>
-  </div>
 </div>
 
 <script>
@@ -109,12 +129,18 @@ class StringedInstrumentVisualizer {
     this.notesPerStringInput = document.getElementById('notes-per-string');
     this.selectedScaleDegreeInput = document.getElementById('selected-scale-degree');
     this.printButton = document.getElementById('print-button');
-    this.customTitleInput = document.getElementById('custom-title');
+    this.exportButton = document.getElementById('export-button');
+    this.savePresetButton = document.getElementById('save-preset-button');
+    this.importFile = document.getElementById('import-file');
+    this.scaleTitleInput = document.getElementById('scale-title');
+    this.displayTitle = document.getElementById('display-title');
+    this.displaySubtitle = document.getElementById('display-subtitle');
     
     // Tuning presets
     this.tuningPresets = {
       'perfect-fourths': ["B1", "E2", "A2", "D3", "G3", "C4", "F4", "Bb4", "Eb5", "Ab5", "Db6", "Gb6"],
-      'standard-guitar': ["E2", "A2", "D3", "G3", "B3", "E4"]
+      'standard-guitar': ["E2", "A2", "D3", "G3", "B3", "E4"],
+      'bass-5-string': ["B1", "E2", "A2", "D3", "G3"]
     };
     
     // Scale interval patterns (semitones between consecutive notes)
@@ -123,203 +149,179 @@ class StringedInstrumentVisualizer {
       'natural-minor': [2, 1, 2, 2, 1, 2, 2],
       'harmonic-minor': [2, 1, 2, 2, 1, 3, 1],
       'melodic-minor': [2, 1, 2, 2, 2, 2, 1],
-      'major-pentatonic': [2, 2, 3, 2, 3],
-      'minor-pentatonic': [3, 2, 2, 3, 2],
-      'dorian': [2, 1, 2, 2, 2, 1, 2],
-      'mixolydian': [2, 2, 1, 2, 2, 1, 2],
+      'pentatonic': [2, 2, 3, 2, 3],
+      'whole-tone': [2, 2, 2, 2, 2, 2],
+      'chromatic': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
       'blues': [3, 2, 1, 1, 3, 2]
     };
     
-    // Visual constants
+    // Default scale preferences
+    this.defaultScalePreferences = {
+      'major': { title: 'Major Scale', notesPerString: 3, selectedScaleDegree: 1, rootNote: 'C' },
+      'natural-minor': { title: 'Natural Minor Scale', notesPerString: 3, selectedScaleDegree: 1, rootNote: 'A' },
+      'harmonic-minor': { title: 'Harmonic Minor Scale', notesPerString: 3, selectedScaleDegree: 1, rootNote: 'A' },
+      'melodic-minor': { title: 'Melodic Minor Scale', notesPerString: 3, selectedScaleDegree: 1, rootNote: 'A' },
+      'pentatonic': { title: 'Pentatonic Scale', notesPerString: 2, selectedScaleDegree: 1, rootNote: 'C' },
+      'whole-tone': { title: 'Whole Tone Scale', notesPerString: 2, selectedScaleDegree: 1, rootNote: 'D' },
+      'chromatic': { title: 'Chromatic Scale', notesPerString: 4, selectedScaleDegree: 1, rootNote: 'D' },
+      'blues': { title: 'Blues Scale', notesPerString: 2, selectedScaleDegree: 1, rootNote: 'A' },
+      'custom': { title: 'Custom Scale', notesPerString: 3, selectedScaleDegree: 1, rootNote: 'C' }
+    };
+    
     this.fretSpacing = 60;
     this.stringSpacing = 40;
     this.margin = { top: 40, right: 20, bottom: 60, left: 80 };
     this.maxFret = 24;
-    this.maxInterval = 6; // Max frets for note finding
+    this.maxInterval = 6;
     
-    // Modal exploration state
-    this.selectedScaleDegree = 1; // Default to scale degree 1
+    this.FRET_PADDING_BELOW = 2;
+    this.FRET_PADDING_ABOVE = 1;
+    this.OCTAVE_2_NOTES = ['F', 'F#', 'G', 'G#', 'A', 'A#', 'B'];
+    
+    this.selectedScaleDegree = 1;
     
     this.init();
   }
   
   init() {
+    this.loadGlobalPreferences(); // Load global settings (tuning, last scale)
+    this.updateScaleDropdown(); // Build dropdown with built-in + custom presets
     this.setupEventListeners();
-    this.updateIntervalsFromScale(); // Auto-populate intervals on initial load
+    this.loadScalePreferences(this.scaleTypeSelect.value); // Load scale preferences and intervals
+    this.updateVisualizationTitle(); // Set initial title
     this.updateNPSConstraints(); // Set initial NPS constraints
     this.updateVisualization();
   }
   
   setupEventListeners() {
-    this.tuningPresetSelect.addEventListener('change', () => this.updateVisualization());
-    this.rootNoteSelect.addEventListener('change', () => this.updateVisualization());
+    this.tuningPresetSelect.addEventListener('change', () => {
+      this.updateVisualizationTitle();
+      this.updateVisualization();
+      this.saveGlobalPreferences();
+    });
+    this.rootNoteSelect.addEventListener('change', () => {
+      this.updateVisualizationTitle();
+      this.updateVisualization();
+      this.saveScalePreferences();
+    });
     this.scaleTypeSelect.addEventListener('change', () => {
-      this.updateIntervalsFromScale();
+      this.loadScalePreferences(this.scaleTypeSelect.value);
+      this.updateVisualizationTitle();
       this.updateVisualization();
     });
     this.scaleIntervalsInput.addEventListener('input', () => {
       this.updateScaleTypeFromIntervals();
       this.updateNPSConstraints();
       this.updateVisualization();
+      this.saveScalePreferences();
     });
     this.notesPerStringInput.addEventListener('input', () => {
       document.getElementById('nps-value').textContent = this.notesPerStringInput.value;
+      this.updateVisualizationTitle();
       this.updateVisualization();
+      this.saveScalePreferences();
     });
     this.selectedScaleDegreeInput.addEventListener('input', () => {
       const newDegree = parseInt(this.selectedScaleDegreeInput.value);
-      if (newDegree >= 1 && newDegree <= this.getMaxScaleDegree()) {
+      if (newDegree >= 1 && newDegree <= this.parseIntervals(this.scaleIntervalsInput.value).length) {
         this.selectedScaleDegree = newDegree;
+        this.updateVisualizationTitle();
         this.updateVisualization();
+        this.saveScalePreferences();
       }
     });
+    this.scaleTitleInput.addEventListener('input', () => {
+      this.updateVisualizationTitle();
+      this.saveScalePreferences();
+    });
     this.printButton.addEventListener('click', () => this.printVisualization());
+    this.exportButton.addEventListener('click', () => this.exportCurrentPattern());
+    this.savePresetButton.addEventListener('click', () => this.promptSaveCustomPreset());
+    this.importFile.addEventListener('change', (e) => this.handleImportFile(e));
   }
   
-  // Calculate greatest common divisor
   gcd(a, b) {
     return b === 0 ? a : this.gcd(b, a % b);
   }
   
-  // Calculate least common multiple
   lcm(a, b) {
     return (a * b) / this.gcd(a, b);
   }
   
-  // Update intervals input based on scale selection
-  updateIntervalsFromScale() {
-    const scaleType = this.scaleTypeSelect.value;
-    const intervals = this.scaleIntervalPatterns[scaleType];
-    if (intervals) {
-      this.scaleIntervalsInput.value = intervals.join(',');
-      this.selectedScaleDegree = 1; // Reset to scale degree 1 when changing scales
-      this.updateNPSConstraints(); // Update NPS max based on new scale
-    }
+  parseIntervals(intervalString) {
+    return intervalString.split(',').map(str => parseInt(str.trim())).filter(n => !isNaN(n));
   }
   
-  // Update scale type based on manually entered intervals
+  
   updateScaleTypeFromIntervals() {
-    const inputIntervals = this.scaleIntervalsInput.value;
-    const inputArray = inputIntervals.split(',').map(str => parseInt(str.trim())).filter(n => !isNaN(n));
+    const inputArray = this.parseIntervals(this.scaleIntervalsInput.value);
     
-    // Check if the input matches any predefined scale
-    for (const [scaleKey, scaleIntervals] of Object.entries(this.scaleIntervalPatterns)) {
-      if (scaleIntervals.length === inputArray.length && 
-          scaleIntervals.every((interval, index) => interval === inputArray[index])) {
-        this.scaleTypeSelect.value = scaleKey;
-        return;
-      }
-    }
+    const matchingScale = Object.entries(this.scaleIntervalPatterns).find(([_, intervals]) =>
+      intervals.length === inputArray.length && 
+      intervals.every((interval, index) => interval === inputArray[index])
+    );
     
-    // If no match found, set to custom
-    this.scaleTypeSelect.value = 'custom';
+    this.scaleTypeSelect.value = matchingScale ? matchingScale[0] : 'custom';
   }
   
-  // Update NPS input constraints based on current interval pattern
   updateNPSConstraints() {
-    const intervalString = this.scaleIntervalsInput.value;
-    const intervals = intervalString.split(',').map(str => parseInt(str.trim())).filter(n => !isNaN(n));
-    const scaleLength = intervals.length;
+    const scaleLength = this.parseIntervals(this.scaleIntervalsInput.value).length;
     
-    if (scaleLength > 0) {
-      // Set max to the number of notes in the scale
-      this.notesPerStringInput.max = scaleLength;
-      
-      // If current value exceeds new max, adjust it
-      const currentValue = parseInt(this.notesPerStringInput.value);
-      if (currentValue > scaleLength) {
-        this.notesPerStringInput.value = scaleLength;
-        document.getElementById('nps-value').textContent = scaleLength;
-      }
-      
-      // Update selected scale degree input constraints
-      this.selectedScaleDegreeInput.max = scaleLength;
-      if (this.selectedScaleDegree > scaleLength) {
-        this.selectedScaleDegree = 1;
-        this.selectedScaleDegreeInput.value = 1;
-      }
+    // Handle case where scale has no valid notes (empty or invalid intervals)
+    if (scaleLength === 0) {
+      this.notesPerStringInput.max = 1;
+      this.notesPerStringInput.value = 1;
+      document.getElementById('nps-value').textContent = 1;
+      this.selectedScaleDegreeInput.max = 1;
+      this.selectedScaleDegree = 1;
+      this.selectedScaleDegreeInput.value = 1;
+      return;
+    }
+    
+    this.notesPerStringInput.max = scaleLength;
+    const currentNPS = parseInt(this.notesPerStringInput.value);
+    if (currentNPS > scaleLength) {
+      this.notesPerStringInput.value = scaleLength;
+      document.getElementById('nps-value').textContent = scaleLength;
+    }
+    
+    this.selectedScaleDegreeInput.max = scaleLength;
+    if (this.selectedScaleDegree > scaleLength) {
+      this.selectedScaleDegree = 1;
+      this.selectedScaleDegreeInput.value = 1;
     }
   }
   
-  // Get maximum scale degree for current pattern
-  getMaxScaleDegree() {
-    const intervalString = this.scaleIntervalsInput.value;
-    const intervals = intervalString.split(',').map(str => parseInt(str.trim())).filter(n => !isNaN(n));
-    return intervals.length;
-  }
-  
-  
-  // Handle note click to change modal center
   onNoteClick(clickedScaleDegree) {
     this.selectedScaleDegree = clickedScaleDegree;
-    this.selectedScaleDegreeInput.value = clickedScaleDegree; // Sync the input
+    this.selectedScaleDegreeInput.value = clickedScaleDegree;
     this.updateVisualization();
   }
   
-  // Update the visualization title with current settings
-  updateTitle() {
-    const rootNote = this.rootNoteSelect.value;
-    const scaleType = this.scaleTypeSelect.options[this.scaleTypeSelect.selectedIndex].text;
-    const tuningType = this.tuningPresetSelect.options[this.tuningPresetSelect.selectedIndex].text;
-    const notesPerString = this.notesPerStringInput.value;
-    const selectedDegree = this.selectedScaleDegree;
-    
-    // Only update if user hasn't manually edited the title
-    const currentTitle = this.customTitleInput.value;
-    const autoGeneratedTitle = `${rootNote} ${scaleType} Grand Unified Scale Pattern`;
-    
-    // Check if current title matches the previous auto-generated pattern
-    const previousPattern = /^[A-G]#?\s+\w+.*Grand Unified Scale Pattern$/;
-    if (previousPattern.test(currentTitle) || currentTitle === autoGeneratedTitle) {
-      this.customTitleInput.value = autoGeneratedTitle;
-    }
-    
-    const subtitle = `${tuningType} • ${notesPerString} Notes per String • Starting from Scale Degree ${selectedDegree}`;
-    document.querySelector('#visualization-title p').textContent = subtitle;
-  }
-  
-  // Print the visualization
   printVisualization() {
-    // Store original dimensions
-    const originalWidth = this.svg.getAttribute('width');
-    const originalHeight = this.svg.getAttribute('height');
+    const [originalWidth, originalHeight] = [this.svg.getAttribute('width'), this.svg.getAttribute('height')];
     
-    // Set larger dimensions for printing (portrait)
     this.svg.setAttribute('width', '800');
     this.svg.setAttribute('height', '1000');
-    
-    // Print
     window.print();
     
-    // Restore original dimensions after a delay
     setTimeout(() => {
       this.svg.setAttribute('width', originalWidth);
       this.svg.setAttribute('height', originalHeight);
     }, 1000);
   }
   
-  // Parse note name to semitone value (C=0, C#/Db=1, etc.)
   parseNote(noteStr) {
     const noteMatch = noteStr.match(/^([A-G])(b|#?)(\d+)$/);
     if (!noteMatch) throw new Error(`Invalid note format: ${noteStr}`);
     
     const [, noteName, accidental, octave] = noteMatch;
+    const noteValues = { C: 0, D: 2, E: 4, F: 5, G: 7, A: 9, B: 11 };
+    const accidentalOffset = accidental === '#' ? 1 : accidental === 'b' ? -1 : 0;
     
-    // Base semitone values for natural notes
-    const noteValues = { 'C': 0, 'D': 2, 'E': 4, 'F': 5, 'G': 7, 'A': 9, 'B': 11 };
-    let semitone = noteValues[noteName];
-    
-    // Apply accidental
-    if (accidental === '#') semitone += 1;
-    if (accidental === 'b') semitone -= 1;
-    
-    // Add octave (C4 = middle C at semitone 48)
-    semitone += parseInt(octave) * 12;
-    
-    return semitone;
+    return noteValues[noteName] + accidentalOffset + parseInt(octave) * 12;
   }
   
-  // Find notes on fretboard by trying multiple starting positions to get longest consecutive pattern
   findNotes(targetNotes, tuning, notesPerString) {
     const tuningValues = tuning.map(note => this.parseNote(note));
     const targetValues = targetNotes.map(note => this.parseNote(note));
@@ -327,24 +329,14 @@ class StringedInstrumentVisualizer {
     if (targetValues.length === 0) return [];
     
     let bestPattern = [];
-    let bestPatternLength = 0;
     
-    // Try different starting positions to find the longest consecutive pattern
     for (let startFret = 1; startFret <= this.maxFret; startFret += this.maxInterval) {
       const pattern = this.findSinglePattern(targetNotes, targetValues, tuning, tuningValues, notesPerString, startFret);
       
-      if (pattern.length > bestPatternLength) {
+      if (pattern.length > bestPattern.length) {
         bestPattern = pattern;
-        bestPatternLength = pattern.length;
-        
-        // If we found all scale degrees, we can stop searching
-        if (bestPatternLength === targetValues.length) {
-          break;
-        }
+        if (bestPattern.length === targetValues.length) break;
       }
-      
-      // If we found a complete pattern, no need to continue
-      if (bestPatternLength === targetValues.length) break;
     }
     return bestPattern;
   }
@@ -454,7 +446,7 @@ class StringedInstrumentVisualizer {
     const rootSemitone = this.parseNote(rootNote);
     
     // Parse intervals from input string
-    const intervals = intervalString.split(',').map(str => parseInt(str.trim())).filter(n => !isNaN(n));
+    const intervals = this.parseIntervals(intervalString);
     if (intervals.length === 0) return [];
     
     // Calculate LCM for extended sequence length
@@ -484,87 +476,47 @@ class StringedInstrumentVisualizer {
     return scaleNotes;
   }
   
-  // Convert semitone back to note name (for debugging/display)
   semitoneToNote(semitone) {
     const noteNames = ['C', 'C#', 'D', 'D#', 'E', 'F', 'F#', 'G', 'G#', 'A', 'A#', 'B'];
-    const octave = Math.floor(semitone / 12);
-    const noteIndex = semitone % 12;
-    return `${noteNames[noteIndex]}${octave}`;
+    return `${noteNames[semitone % 12]}${Math.floor(semitone / 12)}`;
   }
   
-  // Extract note name without octave for string labels
   getNoteName(noteStr) {
-    const noteMatch = noteStr.match(/^([A-G])(b|#?)(\d+)$/);
-    if (!noteMatch) return noteStr;
-    
-    const [, noteName, accidental] = noteMatch;
-    return noteName + (accidental || '');
+    const match = noteStr.match(/^([A-G])(b|#?)/);
+    return match ? match[1] + (match[2] || '') : noteStr;
   }
   
   updateVisualization() {
-    const tuningPreset = this.tuningPresetSelect.value;
-    const tuning = this.tuningPresets[tuningPreset];
-    const stringCount = tuning.length;
+    const tuning = this.tuningPresets[this.tuningPresetSelect.value];
     const notesPerString = parseInt(this.notesPerStringInput.value);
-    // Use octave 2 for F-B to keep visualization lower on fretboard, octave 3 for C-E
     const selectedNote = this.rootNoteSelect.value;
-    const useOctave2 = ['F', 'F#', 'G', 'G#', 'A', 'A#', 'B'].includes(selectedNote);
-    const rootNote = selectedNote + (useOctave2 ? "2" : "3");
+    const rootNote = selectedNote + (this.OCTAVE_2_NOTES.includes(selectedNote) ? "2" : "3");
     const intervalString = this.scaleIntervalsInput.value;
+    const scaleLength = this.parseIntervals(intervalString).length;
     
-    // Parse intervals to get original pattern length
-    const intervals = intervalString.split(',').map(str => parseInt(str.trim())).filter(n => !isNaN(n));
-    const originalPatternLength = intervals.length;
-    
-    // Generate extended scale notes starting from selected scale degree
     const scaleNotes = this.generateExtendedScale(rootNote, intervalString, notesPerString, this.selectedScaleDegree);
-    
-    // Find note positions using generated scale
     const notePositions = this.findNotes(scaleNotes, tuning, notesPerString);
     
-    // Update extended scale info display
     this.updateExtendedScaleInfo(intervalString, notesPerString);
-    
-    // Update the title with current settings
-    this.updateTitle();
-    
-    this.renderFretboard(stringCount, notePositions, originalPatternLength);
+    this.renderFretboard(tuning.length, notePositions, scaleLength);
   }
   
-  // Update the extended scale information display
   updateExtendedScaleInfo(intervalString, notesPerString) {
-    const intervals = intervalString.split(',').map(str => parseInt(str.trim())).filter(n => !isNaN(n));
-    if (intervals.length === 0) {
-      document.getElementById('extended-scale-info').textContent = 'Invalid intervals';
-      return;
-    }
-    
-    const patternLength = intervals.length;
-    const extendedLength = this.lcm(patternLength, notesPerString);
-    
-    document.getElementById('extended-scale-info').textContent = 
-      `${extendedLength} notes (${patternLength} × ${notesPerString} NPS)`;
+    const intervals = this.parseIntervals(intervalString);
+    const infoText = intervals.length === 0 ? 'Invalid intervals' : 
+      `${this.lcm(intervals.length, notesPerString)} notes (${intervals.length} × ${notesPerString} NPS)`;
+    document.getElementById('extended-scale-info').textContent = infoText;
   }
   
-  renderFretboard(stringCount, notePositions, originalPatternLength) {
-    // Clear existing content
+  renderFretboard(stringCount, notePositions, scaleLength) {
     this.svg.innerHTML = '';
     
-    // Get current tuning for string labels
-    const tuningPreset = this.tuningPresetSelect.value;
-    const tuning = this.tuningPresets[tuningPreset].slice(0, stringCount);
+    const tuning = this.tuningPresets[this.tuningPresetSelect.value].slice(0, stringCount);
     
-    // Calculate focused fret range based on note positions
-    let minFretToShow, maxFretToShow;
-    if (notePositions.length > 0) {
-      const noteFrets = notePositions.map(([s, f]) => f);
-      minFretToShow = Math.max(0, Math.min(...noteFrets) - 2);
-      maxFretToShow = Math.max(...noteFrets) + 1;
-    } else {
-      // Fallback if no notes found
-      minFretToShow = 0;
-      maxFretToShow = 4;
-    }
+    const [minFretToShow, maxFretToShow] = notePositions.length > 0 
+      ? [Math.max(0, Math.min(...notePositions.map(([, f]) => f)) - this.FRET_PADDING_BELOW), 
+         Math.max(...notePositions.map(([, f]) => f)) + this.FRET_PADDING_ABOVE]
+      : [0, 4];
     
     const fretRange = maxFretToShow - minFretToShow + 1;
     const width = fretRange * this.fretSpacing + this.margin.left + this.margin.right;
@@ -631,33 +583,24 @@ class StringedInstrumentVisualizer {
       this.svg.appendChild(text);
     }
     
-    // Draw note positions
     notePositions.forEach(([stringIndex, fret], index) => {
-      // Calculate the original scale degree accounting for rotation
-      const rotatedDegree = (index % originalPatternLength) + 1;
-      const originalScaleDegree = ((rotatedDegree - 1 + this.selectedScaleDegree - 1) % originalPatternLength) + 1;
-      this.drawNote(stringIndex, fret, originalScaleDegree, minFretToShow);
+      const rotatedDegree = (index % scaleLength) + 1;
+      const scaleDegree = ((rotatedDegree - 1 + this.selectedScaleDegree - 1) % scaleLength) + 1;
+      this.drawNote(stringIndex, fret, scaleDegree, minFretToShow);
     });
   }
   
-  drawNote(stringIndex, fret, scaleNumber, minFretToShow = 0) {
-    const x = this.margin.left + (fret - minFretToShow - 0.5) * this.fretSpacing;
-    // Get current string count for proper Y positioning (reversed)
-    const tuningPreset = this.tuningPresetSelect.value;
-    const tuning = this.tuningPresets[tuningPreset];
+  drawNote(stringIndex, fret, scaleDegree, minFretToShow = 0) {
+    const tuning = this.tuningPresets[this.tuningPresetSelect.value];
     const stringCount = tuning.length;
+    
+    const x = this.margin.left + (fret - minFretToShow - 0.5) * this.fretSpacing;
     const y = this.margin.top + (stringCount - 1 - stringIndex) * this.stringSpacing;
     
-    // Calculate actual note name for debugging
     const openStringNote = tuning[stringIndex];
-    const openStringSemitone = this.parseNote(openStringNote);
-    const actualNoteSemitone = openStringSemitone + fret;
-    const actualNoteName = this.semitoneToNote(actualNoteSemitone);
+    const actualNoteName = this.semitoneToNote(this.parseNote(openStringNote) + fret);
+    const isSelected = scaleDegree === this.selectedScaleDegree;
     
-    // Determine if this is the selected scale degree
-    const isSelected = scaleNumber === this.selectedScaleDegree;
-    
-    // Draw note circle
     const circle = document.createElementNS('http://www.w3.org/2000/svg', 'circle');
     circle.setAttribute('cx', x);
     circle.setAttribute('cy', y);
@@ -667,20 +610,17 @@ class StringedInstrumentVisualizer {
     circle.setAttribute('stroke-width', '2');
     circle.setAttribute('class', 'note clickable-note');
     circle.setAttribute('data-note', actualNoteName);
-    circle.setAttribute('data-scale-degree', scaleNumber);
+    circle.setAttribute('data-scale-degree', scaleDegree);
     circle.style.cursor = 'pointer';
     
-    // Add click event listener
-    circle.addEventListener('click', () => this.onNoteClick(scaleNumber));
+    circle.addEventListener('click', () => this.onNoteClick(scaleDegree));
     
-    // Add tooltip with note name
     const title = document.createElementNS('http://www.w3.org/2000/svg', 'title');
     title.textContent = this.getNoteName(actualNoteName);
     circle.appendChild(title);
     
     this.svg.appendChild(circle);
     
-    // Scale degree number
     const text = document.createElementNS('http://www.w3.org/2000/svg', 'text');
     text.setAttribute('x', x);
     text.setAttribute('y', y + 5);
@@ -690,11 +630,294 @@ class StringedInstrumentVisualizer {
     text.setAttribute('fill', isSelected ? '#000' : '#fff');
     text.setAttribute('class', 'note clickable-note');
     text.setAttribute('data-note', actualNoteName);
-    text.setAttribute('data-scale-degree', scaleNumber);
+    text.setAttribute('data-scale-degree', scaleDegree);
     text.style.cursor = 'pointer';
-    text.style.pointerEvents = 'none'; // Let clicks pass through to circle
-    text.textContent = scaleNumber;
+    text.style.pointerEvents = 'none';
+    text.textContent = scaleDegree;
     this.svg.appendChild(text);
+  }
+  
+  // Per-Scale Preferences and Global Settings
+  saveScalePreferences() {
+    const scaleType = this.scaleTypeSelect.value;
+    const preferences = this.getScalePreferences();
+    
+    preferences[scaleType] = {
+      title: this.scaleTitleInput.value,
+      notesPerString: parseInt(this.notesPerStringInput.value),
+      selectedScaleDegree: this.selectedScaleDegree,
+      rootNote: this.rootNoteSelect.value
+    };
+    
+    try {
+      localStorage.setItem('guitar-scale-visualizer-scale-preferences', JSON.stringify(preferences));
+    } catch (e) {
+      console.warn('Failed to save scale preferences:', e);
+    }
+  }
+  
+  loadScalePreferences(scaleType) {
+    // Check if it's a custom preset first
+    const customPresets = this.getCustomPresets();
+    if (customPresets[scaleType]) {
+      const customPreset = customPresets[scaleType];
+      this.scaleIntervalsInput.value = customPreset.intervals.join(',');
+      this.scaleTitleInput.value = customPreset.title;
+      this.notesPerStringInput.value = customPreset.notesPerString;
+      document.getElementById('nps-value').textContent = customPreset.notesPerString;
+      this.selectedScaleDegree = customPreset.selectedScaleDegree;
+      this.selectedScaleDegreeInput.value = customPreset.selectedScaleDegree;
+      this.rootNoteSelect.value = customPreset.rootNote;
+      this.updateNPSConstraints();
+      return;
+    }
+    
+    // Handle built-in scales
+    const preferences = this.getScalePreferences();
+    const scalePrefs = preferences[scaleType] || this.defaultScalePreferences[scaleType];
+    
+    if (scalePrefs) {
+      // Load intervals from built-in pattern
+      const intervals = this.scaleIntervalPatterns[scaleType];
+      if (intervals) {
+        this.scaleIntervalsInput.value = intervals.join(',');
+      }
+      
+      // Load scale-specific preferences
+      this.scaleTitleInput.value = scalePrefs.title;
+      this.notesPerStringInput.value = scalePrefs.notesPerString;
+      document.getElementById('nps-value').textContent = scalePrefs.notesPerString;
+      this.selectedScaleDegree = scalePrefs.selectedScaleDegree;
+      this.selectedScaleDegreeInput.value = scalePrefs.selectedScaleDegree;
+      this.rootNoteSelect.value = scalePrefs.rootNote;
+      
+      this.updateNPSConstraints();
+    }
+  }
+  
+  getScalePreferences() {
+    try {
+      const saved = localStorage.getItem('guitar-scale-visualizer-scale-preferences');
+      return saved ? JSON.parse(saved) : {};
+    } catch (e) {
+      console.warn('Failed to load scale preferences:', e);
+      return {};
+    }
+  }
+  
+  saveGlobalPreferences() {
+    const globalPrefs = {
+      tuning: this.tuningPresetSelect.value,
+      lastScaleType: this.scaleTypeSelect.value
+    };
+    
+    try {
+      localStorage.setItem('guitar-scale-visualizer-global', JSON.stringify(globalPrefs));
+    } catch (e) {
+      console.warn('Failed to save global preferences:', e);
+    }
+  }
+  
+  loadGlobalPreferences() {
+    try {
+      const saved = localStorage.getItem('guitar-scale-visualizer-global');
+      if (saved) {
+        const globalPrefs = JSON.parse(saved);
+        if (globalPrefs.tuning) this.tuningPresetSelect.value = globalPrefs.tuning;
+        if (globalPrefs.lastScaleType) this.scaleTypeSelect.value = globalPrefs.lastScaleType;
+      }
+    } catch (e) {
+      console.warn('Failed to load global preferences:', e);
+    }
+  }
+  
+  updateVisualizationTitle() {
+    const scaleTitle = this.scaleTitleInput.value || 'Scale';
+    const rootNote = this.rootNoteSelect.value;
+    const tuningText = this.tuningPresetSelect.options[this.tuningPresetSelect.selectedIndex].text;
+    const nps = this.notesPerStringInput.value;
+    const scaleDegree = this.selectedScaleDegree;
+    
+    this.displayTitle.textContent = `${rootNote} ${scaleTitle} Pattern`;
+    this.displaySubtitle.textContent = `${tuningText} • ${nps} Notes per String • Starting from Scale Degree ${scaleDegree}`;
+  }
+  
+  exportCurrentPattern() {
+    const pattern = {
+      name: this.scaleTitleInput.value || `${this.rootNoteSelect.value} ${this.scaleTypeSelect.options[this.scaleTypeSelect.selectedIndex].text} Pattern`,
+      intervals: this.parseIntervals(this.scaleIntervalsInput.value),
+      rootNote: this.rootNoteSelect.value,
+      notesPerString: parseInt(this.notesPerStringInput.value),
+      tuning: this.tuningPresetSelect.value,
+      selectedScaleDegree: this.selectedScaleDegree,
+      scaleType: this.scaleTypeSelect.value
+    };
+    
+    const blob = new Blob([JSON.stringify(pattern, null, 2)], { type: 'application/json' });
+    const url = URL.createObjectURL(blob);
+    const a = document.createElement('a');
+    a.href = url;
+    a.download = `${pattern.name.replace(/[^a-zA-Z0-9]/g, '_')}.json`;
+    document.body.appendChild(a);
+    a.click();
+    document.body.removeChild(a);
+    URL.revokeObjectURL(url);
+  }
+  
+  handleImportFile(event) {
+    const file = event.target.files[0];
+    if (!file) return;
+    
+    const reader = new FileReader();
+    reader.onload = (e) => {
+      try {
+        const pattern = JSON.parse(e.target.result);
+        this.importPattern(pattern);
+      } catch (error) {
+        alert('Error reading file: Invalid JSON format');
+        console.error('Import error:', error);
+      }
+    };
+    reader.readAsText(file);
+    
+    // Reset file input
+    event.target.value = '';
+  }
+  
+  importPattern(pattern) {
+    try {
+      // Validate required fields
+      if (!pattern.intervals || !Array.isArray(pattern.intervals)) {
+        throw new Error('Invalid pattern: missing or invalid intervals');
+      }
+      
+      // Apply pattern to UI
+      if (pattern.rootNote) this.rootNoteSelect.value = pattern.rootNote;
+      if (pattern.tuning && this.tuningPresets[pattern.tuning]) {
+        this.tuningPresetSelect.value = pattern.tuning;
+      }
+      if (pattern.notesPerString) {
+        this.notesPerStringInput.value = pattern.notesPerString;
+        document.getElementById('nps-value').textContent = pattern.notesPerString;
+      }
+      if (pattern.selectedScaleDegree) {
+        this.selectedScaleDegree = pattern.selectedScaleDegree;
+        this.selectedScaleDegreeInput.value = pattern.selectedScaleDegree;
+      }
+      
+      // Set intervals and update scale type
+      this.scaleIntervalsInput.value = pattern.intervals.join(',');
+      this.updateScaleTypeFromIntervals();
+      
+      // Set scale title if provided
+      if (pattern.name) {
+        this.scaleTitleInput.value = pattern.name;
+      }
+      
+      // Update constraints and visualization
+      this.updateNPSConstraints();
+      this.updateVisualizationTitle();
+      this.updateVisualization();
+      this.saveScalePreferences();
+      this.saveGlobalPreferences();
+      
+    } catch (error) {
+      alert(`Error importing pattern: ${error.message}`);
+      console.error('Import pattern error:', error);
+    }
+  }
+  
+  // Custom Preset Management
+  getCustomPresets() {
+    try {
+      const saved = localStorage.getItem('guitar-scale-visualizer-custom-presets');
+      return saved ? JSON.parse(saved) : {};
+    } catch (e) {
+      console.warn('Failed to load custom presets:', e);
+      return {};
+    }
+  }
+  
+  saveCustomPreset(name, intervals) {
+    const presetId = `custom-${Date.now()}`;
+    const customPresets = this.getCustomPresets();
+    
+    customPresets[presetId] = {
+      title: name,
+      intervals: intervals || this.parseIntervals(this.scaleIntervalsInput.value),
+      notesPerString: parseInt(this.notesPerStringInput.value),
+      selectedScaleDegree: this.selectedScaleDegree,
+      rootNote: this.rootNoteSelect.value
+    };
+    
+    try {
+      localStorage.setItem('guitar-scale-visualizer-custom-presets', JSON.stringify(customPresets));
+      this.updateScaleDropdown();
+      this.scaleTypeSelect.value = presetId; // Select the newly created preset
+      return presetId;
+    } catch (e) {
+      console.warn('Failed to save custom preset:', e);
+      alert('Failed to save preset. Please try again.');
+      return null;
+    }
+  }
+  
+  promptSaveCustomPreset() {
+    const currentTitle = this.scaleTitleInput.value || 'Custom Scale';
+    const presetName = prompt(`Save current pattern as preset:`, currentTitle);
+    
+    if (presetName && presetName.trim()) {
+      const presetId = this.saveCustomPreset(presetName.trim());
+      if (presetId) {
+        alert(`Preset "${presetName}" saved successfully!`);
+      }
+    }
+  }
+  
+  updateScaleDropdown() {
+    const currentValue = this.scaleTypeSelect.value;
+    
+    // Clear existing options
+    this.scaleTypeSelect.innerHTML = '';
+    
+    // Add built-in scales from existing scale definitions
+    Object.keys(this.defaultScalePreferences).forEach(scaleKey => {
+      const option = document.createElement('option');
+      option.value = scaleKey;
+      option.textContent = this.defaultScalePreferences[scaleKey].title.replace(' Scale', '').replace(' Mode', '');
+      this.scaleTypeSelect.appendChild(option);
+    });
+    
+    // Add custom presets
+    const customPresets = this.getCustomPresets();
+    const customPresetIds = Object.keys(customPresets);
+    
+    if (customPresetIds.length > 0) {
+      // Add separator
+      const separator = document.createElement('option');
+      separator.disabled = true;
+      separator.textContent = '────── Custom Presets ──────';
+      this.scaleTypeSelect.appendChild(separator);
+      
+      // Add custom presets
+      customPresetIds.forEach(presetId => {
+        const preset = customPresets[presetId];
+        const option = document.createElement('option');
+        option.value = presetId;
+        option.textContent = `⭐ ${preset.title}`;
+        this.scaleTypeSelect.appendChild(option);
+      });
+    }
+    
+    // Restore previous selection if it still exists
+    if (currentValue) {
+      const optionExists = Array.from(this.scaleTypeSelect.options).some(opt => opt.value === currentValue);
+      if (optionExists) {
+        this.scaleTypeSelect.value = currentValue;
+      } else {
+        this.scaleTypeSelect.value = 'major'; // Default fallback
+      }
+    }
   }
 }
 
@@ -754,7 +977,11 @@ document.addEventListener('DOMContentLoaded', () => {
   .noprint,
   .controls,
   footer,
-  #print-button {
+  #print-button,
+  #export-button,
+  #save-preset-button,
+  #import-file,
+  label[for="import-file"] {
     display: none !important;
   }
   
